--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,6 +1,137 @@
 @charset "UTF-8";
 @import url(https://fonts.googleapis.com/css?family=Raleway:300,400,600);
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
+@import url(https://fonts.googleapis.com/css?family=Hind:400,500);
+.form-group {
+  margin-bottom: 10px;
+}
+
+.form-group label:not(.error) {
+  font-family: 'Montserrat';
+  font-size: 12px;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+
+.form-control {
+  background-color: #ffffff;
+  background-image: none;
+  border: 1px solid rgba(0, 0, 0, 0.07);
+  font-family: 'Montserrat',sans-serif;
+  -webkit-appearance: none;
+  color: #2c2c2c;
+  outline: 0;
+  height: 35px;
+  padding: 9px 12px;
+  line-height: normal;
+  font-size: 13px;
+  font-weight: normal;
+  vertical-align: middle;
+  min-height: 35px;
+  -webkit-transition: all 0.12s ease;
+  transition: all 0.12s ease;
+  box-shadow: none;
+  border-radius: 2px;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  -webkit-transition: background 0.2s linear 0s;
+  transition: background 0.2s linear 0s;
+}
+
+.panel .panel-heading {
+  background: transparent;
+  border-radius: 0px;
+  border-bottom: 0px;
+  padding: 20px;
+  position: relative;
+  z-index: 3;
+  min-height: 48px;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+
+.panel.panel-default {
+  border: 1px solid rgba(0, 0, 0, 0.07);
+}
+
+.panel {
+  box-shadow: none;
+  border-radius: 1px;
+  -webkit-border-radius: 1px;
+  -moz-border-radius: 1px;
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+  position: relative;
+}
+
+.panel .panel-heading + .panel-body {
+  padding-top: 0;
+  height: calc(100% - 50px);
+}
+
+.panel .panel-body {
+  padding: 20px;
+  height: 100%;
+  width: 100%;
+}
+
+.product {
+  text-align: center;
+  vertical-align: middle;
+  text-transform: uppercase;
+  font-weight: 500;
+  margin-top: 1em;
+}
+
+.product-heading {
+  text-align: center;
+  vertical-align: center;
+  font-family: Montserrat;
+  font-weight: 600;
+  text-transform: uppercase;
+  font-size: 25px;
+}
+
+.product > a {
+  color: #5e5f62;
+}
+
+.product > a:hover {
+  color: #647694;
+  text-decoration: none;
+}
+
+.product-name {
+  font-family: 'Hind', sans-serif;
+  font-size: 20px;
+  font-weight: 500;
+  text-transform: uppercase;
+  color: #632626;
+  margin-top: 10px;
+}
+
+.product-info {
+  color: #727272;
+  text-decoration: none;
+  margin-bottom: 20px;
+  margin-top: -13px;
+}
+
+.product-description {
+  margin-top: -15px;
+}
+
+.product-image {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.product-stock {
+  text-transform: uppercase;
+  font-weight: 600;
+}
+
 /*!
  * Bootstrap v3.3.7 (http://getbootstrap.com)
  * Copyright 2011-2016 Twitter, Inc.
@@ -1382,7 +1513,7 @@ body {
   font-size: 14px;
   line-height: 1.6;
   color: #636b6f;
-  background-color: #f5f8fa;
+  background-color: #fafafa;
 }
 
 input,
@@ -1430,7 +1561,7 @@ img {
 .img-thumbnail {
   padding: 4px;
   line-height: 1.6;
-  background-color: #f5f8fa;
+  background-color: #fafafa;
   border: 1px solid #ddd;
   border-radius: 4px;
   -webkit-transition: all 0.2s ease-in-out;
@@ -2738,7 +2869,7 @@ th {
 }
 
 .table .table {
-  background-color: #f5f8fa;
+  background-color: #fafafa;
 }
 
 .table-condensed > thead > tr > th,
@@ -4654,7 +4785,7 @@ tbody.collapse.in {
 
 .nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
   color: #555555;
-  background-color: #f5f8fa;
+  background-color: #fafafa;
   border: 1px solid #ddd;
   border-bottom-color: transparent;
   cursor: default;
@@ -4737,7 +4868,7 @@ tbody.collapse.in {
   .nav-tabs-justified > .active > a, .nav-tabs.nav-justified > .active > a,
   .nav-tabs-justified > .active > a:hover, .nav-tabs.nav-justified > .active > a:hover,
   .nav-tabs-justified > .active > a:focus, .nav-tabs.nav-justified > .active > a:focus {
-    border-bottom-color: #f5f8fa;
+    border-bottom-color: #fafafa;
   }
 }
 
@@ -5147,7 +5278,7 @@ tbody.collapse.in {
 
 .navbar-default {
   background-color: #fff;
-  border-color: #d3e0e9;
+  border-color: #e1e1e1;
 }
 
 .navbar-default .navbar-brand {
@@ -5196,7 +5327,7 @@ tbody.collapse.in {
 
 .navbar-default .navbar-collapse,
 .navbar-default .navbar-form {
-  border-color: #d3e0e9;
+  border-color: #e1e1e1;
 }
 
 .navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
@@ -5717,7 +5848,7 @@ a.badge:hover, a.badge:focus {
   padding: 4px;
   margin-bottom: 22px;
   line-height: 1.6;
-  background-color: #f5f8fa;
+  background-color: #fafafa;
   border: 1px solid #ddd;
   border-radius: 4px;
   -webkit-transition: border 0.2s ease-in-out;
@@ -6000,7 +6131,7 @@ a.thumbnail.active {
   padding: 10px 15px;
   margin-bottom: -1px;
   background-color: #fff;
-  border: 1px solid #d3e0e9;
+  border: 1px solid #e1e1e1;
 }
 
 .list-group-item:first-child {
@@ -6256,7 +6387,7 @@ button.list-group-item-danger.active:focus {
 .panel-footer {
   padding: 10px 15px;
   background-color: #f5f5f5;
-  border-top: 1px solid #d3e0e9;
+  border-top: 1px solid #e1e1e1;
   border-bottom-right-radius: 3px;
   border-bottom-left-radius: 3px;
 }
@@ -6477,7 +6608,7 @@ button.list-group-item-danger.active:focus {
 
 .panel-group .panel-heading + .panel-collapse > .panel-body,
 .panel-group .panel-heading + .panel-collapse > .list-group {
-  border-top: 1px solid #d3e0e9;
+  border-top: 1px solid #e1e1e1;
 }
 
 .panel-group .panel-footer {
@@ -6485,21 +6616,21 @@ button.list-group-item-danger.active:focus {
 }
 
 .panel-group .panel-footer + .panel-collapse .panel-body {
-  border-bottom: 1px solid #d3e0e9;
+  border-bottom: 1px solid #e1e1e1;
 }
 
 .panel-default {
-  border-color: #d3e0e9;
+  border-color: #e1e1e1;
 }
 
 .panel-default > .panel-heading {
   color: #333333;
   background-color: #fff;
-  border-color: #d3e0e9;
+  border-color: #e1e1e1;
 }
 
 .panel-default > .panel-heading + .panel-collapse > .panel-body {
-  border-top-color: #d3e0e9;
+  border-top-color: #e1e1e1;
 }
 
 .panel-default > .panel-heading .badge {
@@ -6508,7 +6639,7 @@ button.list-group-item-danger.active:focus {
 }
 
 .panel-default > .panel-footer + .panel-collapse > .panel-body {
-  border-bottom-color: #d3e0e9;
+  border-bottom-color: #e1e1e1;
 }
 
 .panel-primary {
