--- a/resources/assets/sass/_products.scss
+++ b/resources/assets/sass/_products.scss
@@ -8,7 +8,7 @@
 
 .product-heading {
     text-align: center;
-    vertical-align: center;
+    vertical-align: middle;
     font-family: Montserrat;
     font-weight: 600;
     text-transform: uppercase;
@@ -48,6 +48,7 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 25px;
 }
 
 .product-stock {
