--- a/resources/assets/sass/_home.scss
+++ b/resources/assets/sass/_home.scss
@@ -21,3 +21,13 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+.copyright {
+    font-weight: 600;
+    font-size: 13px;
+    text-transform: uppercase;
+}
+
+.copyright > a {
+    color: #5e5e5e;
+}
